[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/samus-metroid-ship.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://damage.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.3433, 30.9522 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.7476, 30.3708 )

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.142912, -0.278315 )
scale = Vector2( 0.452172, 0.546557 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.936337, -0.593449 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.55563, -0.650378 )
shape = SubResource( 2 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/damage = ExtResource( 3 )
anims/flash = SubResource( 3 )
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
